# smufolib

./: .coveragerc  .coveragerc.ini  .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  release-notes.md  requirements-dev.txt  requirements.txt  setup.cfg  test.py
.github/workflows/: ci.yml  lint-and-type-check.yml  publish-package.yml
SMufoLib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev/: generate_engraving_defaults_mapping_table.py  generate_error_key_literal.py  generate_error_templates_table.py  generate_mapping_table.py  generate_options_table.py  reactivate_env.sh  run_coverage.sh  run_dev.py
dev/inventories/: setuptools_objects_inventory.txt
dev/scripts/: generate_engraving_defaults_mapping_table.py  generate_error_key_literal.py  generate_error_templates_table.py  generate_options_table.py
docs/: conf.py  doctest_setup.py  engraving_defaults_mapping.csv  error_templates.csv  fontparts_object_inventory.txt  getting_started.rst  index.rst  mappings.csv  options.csv  python-inv.txt  release_notes.md  scripts.rst  user_guide.rst  utils.rst
docs/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree  scripts.doctree  utils.doctree
docs/_build/doctrees/api/: cli.doctree  configuration.doctree  objects.doctree  request.doctree
docs/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  utils.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/smufolib/: cli.html  config.html  converters.html  normalizers.html  pointUtils.html  request.html  stdUtils.html
docs/_build/html/_modules/smufolib/objects/: engravingDefaults.html  font.html  glyph.html  layer.html  range.html  smufl.html
docs/_build/html/_sources/: getting_started.rst.txt  index.rst.txt  utils.rst.txt
docs/_build/html/_sources/api/: cli.rst.txt  configuration.rst.txt  objects.rst.txt  request.rst.txt
docs/_build/html/api/: cli.html  configuration.html  objects.html  request.html
docs/_static/css/: custom.css
docs/api/: cli.rst  configuration.rst  objects.rst  request.rst
lib/smufolib/: config.py  converters.py  engraving.py  error.py  font.py  glyph.py  range.py  request.py  smufolib.cfg  structures.py  validators.py
migration/: updateKeys.py
smufolib/: __init__.py  _version.py  cli.py  config.py  constants.py  converters.py  defaults.cfg  engraving.py  error.py  font.py  glyph.py  normalizers.py  pointUtils.py  range.py  request.py  smufolib.cfg  stdUtils.py  test.py  validators.py
smufolib/metadata/: __init__.py
smufolib/objects/: _lib.py  anchors.py  engravingDefaults.py  font.py  glyph.py  layer.py  range.py  smufl.py
smufolib/tests/: __init__.py  test_cli.py  test_config.py  test_converters.py  test_engravingDefaults.py  test_error.py  test_normalizers.py  test_pointUtils.py  test_range.py  test_request.py  test_smufl.py  test_stdUtils.py
smufolib/utils/: _annotations.py  converters.py  error.py  normalizers.py  pointUtils.py  rulers.py  scriptUtils.py  stdUtils.py
tests/: __init__.py  testUtils.py  test_cli.py  test_config.py  test_converters.py  test_engravingDefaults.py  test_error.py  test_glyph.py  test_normalizers.py  test_pointUtils.py  test_range.py  test_request.py  test_smufl.py  test_stdUtils.py  test_updateKeys.py
tests/resources/: smufolib.cfg
tests/resources/Bravura_full.ufo/: features.fea  fontinfo.plist  kerning.plist  lib.plist
tests/resources/Bravura_full.ufo/data/: com.fontlab.v2.otl.ttx.xml
tests/resources/Bravura_full.ufo/glyphs/: _notdef.glif  contents.plist  musicalnote.glif  musicalnotedbl.glif  oneeighth.glif  onehalf.glif  onequarter.glif  space.glif  threequarters.glif  u1D_100.glif  u1D_101.glif  u1D_102.glif  u1D_103.glif  u1D_104.glif  u1D_105.glif  u1D_106.glif  u1D_107.glif  u1D_108.glif  u1D_109.glif  u1D_10A_.glif  u1D_10B_.glif  u1D_10C_.glif  u1D_10D_.glif  u1D_10E_.glif  u1D_10F_.glif  u1D_110.glif  u1D_111.glif  u1D_112.glif  u1D_113.glif  u1D_114.glif  u1D_115.glif  u1D_116.glif  u1D_117.glif  u1D_118.glif  u1D_119.glif  u1D_11A_.glif  u1D_11B_.glif  u1D_11C_.glif  u1D_11D_.glif  u1D_11E_.glif  (+3497 more)
tests/smufolib/: test_cli.py  test_config.py  test_error.py  test_normalizers.py  test_pointUtils.py  test_request.py  test_stdUtils.py  test_updateKeys.py
tests/smufolib/objects/: test_engravingDefaults.py  test_font.py  test_glyph.py  test_range.py  test_smufl.py
tests/smufolib/utils/: test_converters.py  test_error.py  test_normalizers.py  test_pointUtils.py  test_rulers.py  test_scriptUtils.py  test_stdUtils.py
