[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SMufoLib"
version = "0.1.0"
dependencies = [
    "fontParts",
    "tqdm",
]

requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://github.com/knutnergaard/SMufoLib"

[project.scripts]
check-anchors = "bin.checkAnchors:main"
generate-metadata = "bin.generateMetadata:main"
import-anchors = "bin.importAnchors:main"
calculate-engraving-defaults = "bin.calculateEngravingDefaults:main"
import-id = "bin.importID:main"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

