[metadata]
name = SMufoLib
version = 0.0.2
description = FontParts based library for SMuFL font scripting
long_description = file: README.rst
author = Knut Nergaard
author_email = knut.nergaard@gmail.com
keywords = smufl, font, fontParts, ufo
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
install_requires =
    fontParts
packages = find:
package_dir =
    = lib
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = lib
exclude =
    tests

[project.urls]
Homepage = https://github.com/knutnergaard/SMufoLib

[options.entry_points]
console_scripts =
    checkAnchors = bin.check_anchors:checkAnchors
    exportAnnotation = bin.export_annotation:exportAnnotation
    generateMetadata = bin.generate_metadata:generateMetadata
    importAnnotation = bin.import_annotation:importAnnotation
    notateDescriptions = bin.notate_descriptions:notateDescriptions
    notateSmuflNames = bin.notate_smufl_names:notateSmuflNames

